--- a/assets/style.css
+++ b/assets/style.css
@@ -357,10 +357,45 @@ img:hover {
     [...]
 }
 
+#consistency-table .export{
+    position: absolute;
+    top: 0px;
+    margin-top: -5%;
+    margin-left: 48%;
+    margin-bottom: 5px;
+    line-height: 1.3;
+    padding: 2px 2px 2px 2px;
+    vertical-align: middle;
+    font-size: 11px;
+    font-type: sans-serif;
+    font-weight: 900;
+    flex-grow: 1;
+    justify-content: flex-end;
+    display: flex;
+    [...]
+}
+
+#netsplit_table-container .export{
+    position: absolute;
+    margin-top: -5%;
+    margin-left: 85%;
+    margin-bottom: 5px;
+    line-height: 1.3;
+    padding: 2px 2px 2px 2px;
+    vertical-align: middle;
+    font-size: 11px;
+    font-type: sans-serif;
+    font-weight: 900;
+    flex-grow: 1;
+    justify-content: flex-end;
+    display: flex;
+    [...]
+}
+
 
 #datatable-upload-container .export{
     position: absolute;
-    bottom: 0px;
+    margin-bottom: 5px;
     margin-left: 5px;
     margin-top: 3px;
     line-height: 1.3;
