--- a/assets/style.css
+++ b/assets/style.css
@@ -114,7 +114,7 @@ h6 {margin-top: 0;}
     color: #9d9d9d !important;
     /*letter-spacing: 0.1rem !important;*/
     /*padding: 25px 25px 0px 25px;*/
-    /*margin-bottom: -15px !important;*/
+    /*padding-bottom: -35px !important;*/
     font-size: 12px;
     font-family: "sans-serif" !important;
 }
