more fixings: modal network and modal data

--- a/assets/style.css
+++ b/assets/style.css
@@ -638,3 +638,4 @@ li a {
 /*var(--CLR_BCKGRND)*/
 /* #36726e color green as nodes */
 
+/*.html2canvas-container { width: 3000px !important; height: 3000px !important; }*/
