minor adjustments league table, documentation

--- a/assets/style.css
+++ b/assets/style.css
@@ -599,7 +599,9 @@ img:hover {
 
 ul {
   list-style-type: none;
-  padding: 30px;
+
+    padding-left: 40px;
+
     min-width: 100px;
     color:white;
      white-space: nowrap;
