--- a/assets/style.css
+++ b/assets/style.css
@@ -669,3 +669,57 @@ li a {
 /* #36726e color green as nodes */
 
 /*.html2canvas-container { width: 3000px !important; height: 3000px !important; }*/
+
+
+/*        SCROLLBAR    */
+
+/*.scrollbar*/
+/*{*/
+/*  margin-left: 30px;*/
+/*  float: left;*/
+/*  height: 300px;*/
+/*  width: 65px;*/
+/*  background: #F5F5F5;*/
+/*  overflow-y: scroll;*/
+/*  margin-bottom: 25px;*/
+/*}*/
+
+/*.force-overflow*/
+/*{*/
+/*  min-height: 450px;*/
+/*}*/
+
+/*#wrapper*/
+/*{*/
+/*  text-align: center;*/
+/*  width: 500px;*/
+/*  margin: auto;*/
+/*}*/
+
+
+/*!**/
+/* *  STYLE 2*/
+/* *!*/
+
+
+
+/*.datatable-upload-container_row::-webkit-scrollbar-track*/
+/*{*/
+/*  -webkit-box-shadow: inset 0 0 6px rgba(184, 21, 21, 0.3)!important;*/
+/*  border-radius: 10px!important;*/
+/*  background-color: #db5050!important;*/
+/*}*/
+
+/*.datatable-upload-container__row::-webkit-scrollbar*/
+/*{*/
+/*  width: 12px!important;*/
+/*  background-color: #895252!important;*/
+/*}*/
+
+/*.datatable-upload-container__row::-webkit-scrollbar-thumb*/
+/*{*/
+/*  border-radius: 10px!important;*/
+/*  -webkit-box-shadow: inset 0 0 6px rgb(20, 96, 242)!important;*/
+/*  background-color: #D62929!important;*/
+/*}*/
+
