--- a/assets/style.css
+++ b/assets/style.css
@@ -699,6 +699,97 @@ li a {
 
 /*        SCROLLBAR    */
 
+
+:root{
+  --ECB-blue: #475684;
+  --backgroud-scrollbar: rgba(206, 206, 206, 0);
+}
+
+.scrollbar
+{
+  margin-left: 30px;
+  float: left;
+  height: 300px;
+  background: var(--backgroud-scrollbar);
+  overflow: hidden;
+  margin-bottom: 25px;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+.force-overflow
+{
+  min-height: 450px;
+}
+
+#wrapper
+{
+  text-align: center;
+  width: 500px;
+  margin: auto;
+}
+
+
+/*
+*  STYLE IT
+*/
+
+body::-webkit-scrollbar-track
+{
+  -webkit-box-shadow: inset 0 0 6px var(--backgroud-scrollbar);
+  background-color: var(--backgroud-scrollbar);
+}
+
+body::-webkit-scrollbar
+{
+  width: 6px;
+  height: 6px;
+  display: none;
+}
+.scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+
+body::-webkit-scrollbar-thumb
+{
+  background-color: var(--ECB-blue);
+}
+
+div::-webkit-scrollbar-track
+{
+  -webkit-box-shadow: inset 0 0 6px var(--backgroud-scrollbar);
+  background-color: var(--backgroud-scrollbar);
+}
+
+div::-webkit-scrollbar
+{
+  width: 6px;
+  height: 6px;
+}
+
+div::-webkit-scrollbar-thumb
+{
+  background-color: var(--ECB-blue);
+}
+
+::-webkit-scrollbar-corner {
+  background: rgba(0,0,0,0);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /*.scrollbar*/
 /*{*/
 /*  margin-left: 30px;*/
