Add instruction icon

--- a/assets/style.css
+++ b/assets/style.css
@@ -196,8 +196,6 @@ h6 {margin-top: 0;}
 }
 
 
-
-
 .first {margin-bottom: 15px;}
 
 .second {margin-top: 15px;}
@@ -701,97 +699,6 @@ li a {
 
 /*        SCROLLBAR    */
 
-
-:root{
-  --ECB-blue: #475684;
-  --backgroud-scrollbar: rgba(206, 206, 206, 0);
-}
-
-.scrollbar
-{
-  margin-left: 30px;
-  float: left;
-  height: 300px;
-  background: var(--backgroud-scrollbar);
-  overflow: hidden;
-  margin-bottom: 25px;
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
-}
-
-.force-overflow
-{
-  min-height: 450px;
-}
-
-#wrapper
-{
-  text-align: center;
-  width: 500px;
-  margin: auto;
-}
-
-
-/*
-*  STYLE IT
-*/
-
-body::-webkit-scrollbar-track
-{
-  -webkit-box-shadow: inset 0 0 6px var(--backgroud-scrollbar);
-  background-color: var(--backgroud-scrollbar);
-}
-
-body::-webkit-scrollbar
-{
-  width: 6px;
-  height: 6px;
-  display: none;
-}
-.scrollbar::-webkit-scrollbar {
-  display: none;
-}
-
-
-body::-webkit-scrollbar-thumb
-{
-  background-color: var(--ECB-blue);
-}
-
-div::-webkit-scrollbar-track
-{
-  -webkit-box-shadow: inset 0 0 6px var(--backgroud-scrollbar);
-  background-color: var(--backgroud-scrollbar);
-}
-
-div::-webkit-scrollbar
-{
-  width: 6px;
-  height: 6px;
-}
-
-div::-webkit-scrollbar-thumb
-{
-  background-color: var(--ECB-blue);
-}
-
-::-webkit-scrollbar-corner {
-  background: rgba(0,0,0,0);
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /*.scrollbar*/
 /*{*/
 /*  margin-left: 30px;*/
@@ -842,3 +749,34 @@ div::-webkit-scrollbar-thumb
 /*  background-color: #D62929!important;*/
 /*}*/
 
+
+#slider-container {
+    position: relative;
+}
+
+#query-icon:hover #slider-instruction {
+    display: block;
+}
+
+#slider-instruction {
+    display: none;
+    margin-top: 20px;
+    position: absolute;
+    top: 3px;
+    right: 18px;
+    border: 1px solid black;
+    padding: 30px 60px;
+    z-index: 1000;
+    background-color: rgb(26, 36, 43);
+    color: white;
+}
+
+
+#query-icon{
+    margin-top: 2cm;
+    position: absolute;
+    top: 235px;
+    left: 1430px;
+    z-index: 1000;
+    width: 16px;
+}
