--- a/assets/app.css
+++ b/assets/app.css
@@ -45,7 +45,7 @@ PLotly.js
  */
 @import url(https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap);
 :root {
-    --app-background-color:#1b242b; /*#1b242b;*/
+    --app-background-color:#e8eaeb; /*#1b242b;*/
     --dropdownmenu-hover-background-color: #798d8f;
     --blue: #2c3e50;
     --indigo: #6610f2;
@@ -541,7 +541,7 @@ select { word-wrap: normal }
     border: 1px solid transparent;
     /*padding: 1rem 1rem;*/
 
-    color: var(--white) !important;
+    color: var(--black) !important;
     letter-spacing: 0.3rem !important;
     /*padding: 0px 25px 25px 25px;*/
     /*margin-bottom: 0px !important;*/
@@ -592,9 +592,9 @@ a.btn.disabled, fieldset:disabled a.btn {pointer-events: none}
     /*rgba(76, 91, 106, .5)*/
 }
 .btn-secondary { /*THIS ONE FOR DROPDOWNS*/
-    color: #fff;
-    background-color: var(--app-background-color);
-    border-color:  var(--app-background-color);
+    color:  #fff;
+    /* background-color: var(--app-background-color);
+    border-color:  var(--app-background-color); */
 }
 .btn-secondary:hover {
     color: #fff;
@@ -611,12 +611,12 @@ a.btn.disabled, fieldset:disabled a.btn {pointer-events: none}
 }
 .btn-secondary.disabled, .btn-secondary:disabled {
     color: #fff;
-    background-color: #95a5a6;
+    background-color: #d1d2d2;
     border-color: #ffffff
 }
 .btn-secondary:not(:disabled):not(.disabled).active, .btn-secondary:not(:disabled):not(.disabled):active, .show > .btn-secondary.dropdown-toggle {
     color: #fff;
-    background-color: #738789;
+    background-color: #9ac6c6;
     /*border-color: #738789*/
 }
 /*.btn-secondary:not(:disabled):not(.disabled).active:focus, .btn-secondary:not(:disabled):not(.disabled):active:focus, .show > .btn-secondary.dropdown-toggle:focus {*/
@@ -1123,7 +1123,7 @@ input[type=button].btn-block, input[type=reset].btn-block, input[type=submit].bt
     padding: .25rem 1.5rem;
     clear: both;
     font-weight: 400;
-    color: #b1b2b2;   /* COLOR OF TEXT IN DROPDOWN ITEM*/
+    color: #575858;   /* COLOR OF TEXT IN DROPDOWN ITEM*/
     text-align: inherit;
     white-space: nowrap;
     background-color: transparent;
@@ -1146,7 +1146,7 @@ input[type=button].btn-block, input[type=reset].btn-block, input[type=submit].bt
 }
 .dropdown-menu.show {
     display: block;
-    color: var(--app-background-color);
+    color: black;
 }
 
 .dropdown-header {
@@ -1205,24 +1205,25 @@ input[type=button].btn-block, input[type=reset].btn-block, input[type=submit].bt
 .modal-content{position:relative;display:-ms-flexbox;display:flex;-ms-flex-direction:column;flex-direction:column;width:100%;pointer-events:auto;
     background-color:var(--app-background-color);
     background-clip:padding-box;
-    border:1px solid rgba(0,0,0,.2);border-radius:.3rem;outline:0}
+    /* border:1px solid rgba(0,0,0,.2); */
+    border-radius:.3rem;outline:0}
 .modal-backdrop{position:fixed;top:0;right:0;bottom:0;left:0;z-index:1040;background-color: #1a1818
 }
 .modal-backdrop.fade{opacity:0}.modal-backdrop.show{opacity:.5}
 .modal-header{display:-ms-flexbox;
+    background-color: #738789;
     display:flex;
-    color: #fff;
     -ms-flex-align:start;
     align-items:flex-start;
     -ms-flex-pack:justify;
     justify-content:space-between;
     padding:1rem;
-    border-bottom:1px solid #e9ecef;
+    /* border-bottom:1px solid black; */
     border-top-left-radius:.3rem;
     border-top-right-radius:.3rem}
 .modal-header .close{padding:1rem;
                      margin:-1rem -1rem -1rem auto}
-.modal-title{margin-bottom:0;line-height:1.5}
+.modal-title{margin-bottom:0;line-height:1.5; color: white;}
 .modal-body{position:relative;-ms-flex:1 1 auto;flex:1 1 auto;padding:1rem}
 .modal-body,
 .modal-body .dropdown {position: static;}
@@ -1230,7 +1231,10 @@ input[type=button].btn-block, input[type=reset].btn-block, input[type=submit].bt
   top: 100px;
   left: 20px;
 }
-.modal-footer{display:-ms-flexbox;display:flex;-ms-flex-align:center;align-items:center;-ms-flex-pack:end;justify-content:flex-end;padding:1rem;border-top:1px solid #e9ecef}
+.modal-footer{display:-ms-flexbox;display:flex;-ms-flex-align:center;align-items:center;-ms-flex-pack:end;
+    justify-content:flex-end;padding:1rem;
+    /* border-top:1px solid black; */
+background-color: #738789;}
 .modal-footer>:not(:first-child){margin-left:.25rem}
 .modal-footer>:not(:last-child){margin-right:.25rem}
 .modal-scrollbar-measure{position:absolute;top:-9999px;width:50px;height:50px;overflow:scroll}
