--- a/assets/style.css
+++ b/assets/style.css
@@ -753,7 +753,24 @@ li a {
 /*  background-color: #D62929!important;*/
 /*}*/
 
+#overall_infor{
+    display: none;
+    color: black;
+    margin-top: -2px;
+    margin-left: 550px;
+    position: absolute;
+    z-index: 1000;
+    font-size: small;
+    text-align: justify;
+    border: 1px solid rgb(92, 119, 128);
+    background-color: white;
+    width: 200px;
+    height: 200px;
+}
 
+#info_icon:hover #overall_infor {
+    display: block;
+}
 
 #slider-container {
     position: relative;
