--- a/assets/style.css
+++ b/assets/style.css
@@ -782,10 +782,10 @@ li a {
 
 #slider-instruction {
     display: none;
-    margin-top: 20px;
+    /* margin-top: 20px; */
     position: absolute;
-    top: 3px;
-    right: 18px;
+    top: 45px;
+    /* right: 18px; */
     border: 1px solid black;
     padding: 10px 10px;
     z-index: 1000;
@@ -797,11 +797,8 @@ li a {
 }
 
 #query-icon{
-    margin-top: 2cm;
-    position: absolute;
-    top: 232px;
-    left: 1430px;
-    z-index: 1000;
+    margin-top: -40px;
+    /* margin-left: 360px; */
     width: 16px;
 }
 
